--- a/AutoTest/index.html
+++ b/AutoTest/index.html
@@ -22,17 +22,10 @@
 
 <body>
 
-  <script>
-    const pow = (x, n) => {
-        if (n <= 0) return NaN
-        if (Math.round(n) != n ) return NaN     
-        return x ** n
-    }
-
-    const sum = (x, n) => {
-        return x + n
-    }
+  <script src="./index.js">
+  
   </script>
+  
 
   <!-- скрипт со спецификацией (describe, it...) -->
   <script src="test.js"></script>
@@ -44,6 +37,7 @@
   <script>
     mocha.run();
   </script>
+
 </body>
 
 </html>
